[KOGITO-1248] Avoid java11 methods
Signed-off-by: ruromero <rromerom@redhat.com>